# nonebot2_docker

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  clovers.toml  docker-compose.yml  pyproject.toml  requirements.py  requirements.txt  upgrade req.py
.github/workflows/: docker-image.yml
LeafGames/: russian_data.json
LeafGames/backup/2025-01-24/: russian_data 04-00-00.json
LeafGames/backup/2025-01-25/: russian_data 20-00-00.json
data/: talk_with_chatgpt.json
data/anymate/: data.db
data/impact/: impact.db
data/learning_chat/: learning_chat.db-shm  learning_chat.db-wal  learning_chat.yml  sample.db
data/manager/: plugin_list.yml
data/russian/: market_history.json  russian_data.json
data/russian/backup/2024-10-20/: russian_data 00-00-00.json  russian_data 04-00-00.json
data/smart_reply/: cookie1.json  cookie2.json
data/zxui/: menu.json  secret.txt  token.json
data/zxui/db/: zhenxun.db  zhenxun.db-shm  zhenxun.db-wal
data/zxui/zxpm/configs/: plugins2block.yaml  plugins2cd.yaml  plugins2count.yaml
docker/: gunicorn_conf.py
localstore/: nonebot_plugin_error_alert.json
localstore/fav_watcher/: data.json
localstore/nonebot_plugin_deer_pipe/: userdata.db
localstore/nonebot_plugin_gpt/test/: mdstatus.json  personality
localstore/nonebot_plugin_memes/: meme_manager.yml
localstore/nonebot_plugin_tortoise_orm/: db.sqlite3-shm  db.sqlite3-wal
localstore/nonebot_plugin_web_bottle/: bottle.db
plugins/nonebot-plugin-gta5status/: __init__.py
plugins/nonebot-plugin-jinyan/: __init__.py  config.py
(+2 files in other folders)
