[project]
name = "test"
version = "0.1.0"
description = "test"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_smart_reply", "nonebot_plugin_crazy_thursday", "nonebot_plugin_memes", "nonebot_plugin_wolf_kill", "nonebot_plugin_miragetank","nonebot_plugin_maze", "nonebot_plugin_impact", "nonebot_plugin_manager", "nonebot_plugin_remake", "nonebot_plugin_ottohzys", "nonebot_plugin_batitle", "nonebot_plugin_pjsk", "nonebot_plugin_mypower", "nonebot_plugin_longtu", "nonebot_plugin_localstore", "nonebot_plugin_chikari_yinpa", "nonebot_plugin_diffsinger", "nonebot_plugin_yinyu", "nonebot_plugin_wordcloud", "nonebot_plugin_asmr", "nonebot_plugin_anymate", "nonebot_plugin_htmlrender", "nonebot_plugin_zxui", "nonebot_plugin_emlp_Lightweight", "nonebot_plugin_game_collection", "nonebot_plugin_apscheduler", "nonebot_plugin_gpt", "nonebot_plugin_dingzhen", "nonebot_plugin_argot", "nonebot_plugin_asmr100", "nonebot_plugin_tieba_monitor", "nonebot_plugin_github_release_notifier", "nonebot_plugin_steam_game_status", "nonebot_plugin_sideload"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "3.12.8"